Adição de autenticação de usuários

--- a/Views/Tarefas/gerenciamento_de_tarefas.cshtml
+++ b/Views/Tarefas/gerenciamento_de_tarefas.cshtml
@@ -25,6 +25,7 @@
             <div class="card-body">
                 <h5 class="card-title">@Html.DisplayFor(model => item.Titulo)</h5>
                 <p class="card-text">@Html.DisplayFor(model => item.Descricao)</p>
+                <p class="card-text">@Html.DisplayFor(model => item.Id)</p>
                 <a href="vertarefa" class="btn btn-primary">Ver tarefa</a>
             </div>
             </div>
