Adição da funcionalidade que permmite ver detalhes das tarefas

--- a/Views/Tarefas/gerenciamento_de_tarefas.cshtml
+++ b/Views/Tarefas/gerenciamento_de_tarefas.cshtml
@@ -1,4 +1,7 @@
-@model IEnumerable<Gerenciamento_de_Tarefas.Models.Tarefa>
+@model IEnumerable<Gerenciamento_de_Tarefas.Models.Tarefa> 
+
+
+
 
 @{
     ViewData["Title"] = "Gerenciamento de tarefas";
@@ -11,7 +14,11 @@
     <div class="card-body">
         <h5 class="card-title"></h5>
         <p class="card-text"></p>
-        <a href="criartarefa" class="btn btn-primary">Criar Nova tarefa</a>
+        <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <a asp-action="criartarefa" class="btn btn-primary" >Cadastrar </a>
+        </div>
+    </div>
     </div>
 </div>
     
@@ -20,16 +27,18 @@
        @if(Model != null){
          @foreach(var item in Model)
         {
-            <br>
-            <div class="card text-center">
-            <div class="card-body">
-                <h5 class="card-title">@Html.DisplayFor(model => item.Titulo)</h5>
-                <p class="card-text">@Html.DisplayFor(model => item.Descricao)</p>
-                <p class="card-text">@Html.DisplayFor(model => item.Id)</p>
-                <a href="vertarefa" class="btn btn-primary">Ver tarefa</a>
-            </div>
-            </div>
 
+            <br>
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h5 class="card-title">@Html.DisplayFor(model => item.Titulo)</h5>
+                        <p class="card-text">@Html.DisplayFor(model => item.Descricao)</p>
+                        <p class="card-text">@Html.DisplayFor(model => item.Id)</p>
+                        <p class="card-text">@Html.DisplayFor(model => item.UsuarioId)</p>
+                        <br>
+                        @Html.ActionLink("Detalhes", "Vertarefa", new { id = item.Id }, new { @class = "btn btn-primary" })
+                    </div>
+                </div>
         }
        }
        else
