--- a/Views/Tarefas/login.cshtml
+++ b/Views/Tarefas/login.cshtml
@@ -8,16 +8,19 @@
 
 <form asp-action="Login" method="post">
     <div class="form-group">
-        <label asp-for="Nome">Nome</label>
-        <input asp-for="Nome" class="form-control" />
+        <label asp-for="Email">Email</label>
+        <input asp-for="Email" class="form-control" />
     </div>
-   <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Verificar" class="btn btn-default" />
-        </div>
+    <div class="form-group">
+        <label asp-for="Senha">Senha</label>
+        <input asp-for="Senha" class="form-control" />
     </div>
-    
+    <div class="d-grid gap-2 d-md-block">
+        <input type="submit" value="Logar" class="btn btn-primary" />
+        <a asp-action="cadastro" class="btn btn-primary" >Cadastrar</a>
+    </div>
 </form>
+
 
 
 
