--- a/Views/Tarefas/vertarefa.cshtml
+++ b/Views/Tarefas/vertarefa.cshtml
@@ -1,23 +1,17 @@
-@model IEnumerable<Gerenciamento_de_Tarefas.Models.Tarefa>
+@model Gerenciamento_de_Tarefas.Models.Tarefa
 
-@if(Model != null){
-         @foreach(var item in Model)
-        {
-            <div class="card text-center">
-                <div class="card-body">
-                    <h5 class="card-title">@Html.DisplayFor(model => item.Titulo)</h5>
-                    <p class="card-text">@Html.DisplayFor(model => item.UsuarioId)</p>
-                    <p class="card-text">@Html.DisplayFor(model => item.Descricao)</p>
-                    <p class="card-text">@Html.DisplayFor(model => item.StatusDaTarefa)</p>
-                    <p class="card-text">@Html.DisplayFor(model => item.DataCriacao)</p>
-                    <p class="card-text">@Html.DisplayFor(model => item.DataDeInicioDaTarefa)</p>
-                    <p class="card-text">@Html.DisplayFor(model => item.DataFimDaTarefa)</p>
-                    <a href="gerenciamento_de_tarefas" class="btn btn-primary">Voltar</a>
-                </div>
-            </div>
-        }
-       }
-       else
-       {
-        <p>No data available</p>
-       }
+@{
+    ViewData["Title"] = "Detalhes da Tarefa";
+}
+
+<h2>@Model.Titulo</h2>
+
+<div>
+    <p><strong>Descrição:</strong> @Model.Descricao</p>
+    <p><strong>Descrição:</strong> @Model.Id</p>
+    <p><strong>Descrição:</strong> @Model.DataCriacao</p>
+    <p><strong>Descrição:</strong> @Model.DataDeInicioDaTarefa</p>
+    <p><strong>Descrição:</strong> @Model.DataFimDaTarefa</p>
+    <p><strong>Descrição:</strong> @Model.StatusDaTarefa</p>
+</div>
+
